--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,7 @@
   font-family:'Courier New', Courier, monospace
 }
 html, body {
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
